fix: Align Cards and descriptions

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -26,6 +26,7 @@ article h3 {
 .card-description {
 	display: flex;
 	flex-direction: column;
+	align-self: flex-start;
 	gap: 10px;
 }
 
