--- a/src/components/CharactersSection/style.css
+++ b/src/components/CharactersSection/style.css
@@ -18,6 +18,7 @@
 
 .main-cards {
 	display: flex;
+	justify-content: center;
 	gap: 36px;
 	flex-wrap: wrap;
 	flex-basis: 25%;
